--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a {
   text-transform: capitalize;
 }
 
-.navbar {
+#header .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,11 +59,11 @@ a {
   gap: 1rem;
   position: relative;
 }
-.navbar .nav-brand {
+#header .navbar .nav-brand {
   font-size: 2rem;
-  color: red;
+  color: grey;
 }
-.navbar .collapse-button {
+#header .navbar .collapse-button {
   padding: 5px 3px;
   position: absolute;
   right: 10px;
@@ -74,19 +74,59 @@ a {
   font-size: 1.5rem;
   display: none;
 }
-.navbar .collapse .navbar-nav {
+#header .navbar .collapse .navbar-nav {
   display: flex;
   gap: 1rem;
 }
-.navbar .collapse .navbar-nav .nav-link {
+#header .navbar .collapse .navbar-nav .nav-link {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1.4rem;
+  color: black;
+  opacity: 0.5;
 }
-.navbar .collapse .navbar-nav .search-box {
-  padding-right: 1rem;
+#header .navbar .collapse .navbar-nav .nav-link.active {
+  opacity: 1;
 }
-.navbar .collapse .navbar-nav i {
+#header .navbar .collapse .navbar-nav i {
+  font-size: 1.6rem;
+  color: black;
+}
+
+#about-me h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+}
+#about-me .about-me-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
+#about-me .img-container {
+  width: 400px;
+  height: 400px;
+}
+#about-me .img-container img {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#about-me .about-details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-self: center;
+}
+#about-me .about-details h3 {
+  font-size: 1.8rem;
+}
+#about-me .about-details p {
   font-size: 1.6rem;
 }
 
@@ -167,6 +207,8 @@ a {
 }
 .my-work .filter .sub-heading {
   color: black;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
 }
 .my-work .filter .filter-items {
   display: flex;
@@ -288,6 +330,110 @@ a {
   background-image: linear-gradient(to top, black, transparent);
   pointer-events: none;
   transition: all 0.4s;
+}
+
+#contact {
+  margin-top: 2px;
+  padding: 30px;
+}
+#contact h1 {
+  text-align: center;
+  padding: 10px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+#contact .contact-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 100vh;
+  padding: 0.2em;
+  font-size: 20px;
+}
+#contact .contact-container .contacts-info {
+  justify-self: center;
+}
+#contact .contact-container .contacts-info h2 {
+  padding: 0.3em 0em;
+  letter-spacing: 0.1em;
+}
+#contact .contact-container .contacts-info .contact {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 5px;
+}
+#contact .contact-container .contacts-info .contact-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+#contact .contact-container .contacts-info .contact-media i {
+  font-size: 25px;
+  margin: 0.8em 0em;
+}
+#contact .contact-container .contacts-info .contact-media i:hover {
+  transform: scale(1.5);
+  cursor: pointer;
+}
+#contact .contact-form {
+  justify-self: center;
+}
+#contact .contact-form .form-container {
+  width: 400px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+#contact .contact-form .form-container input {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  background-color: gray;
+  cursor: pointer;
+}
+#contact .contact-form .form-container input::-moz-placeholder {
+  color: #fff;
+}
+#contact .contact-form .form-container input::placeholder {
+  color: #fff;
+}
+#contact .contact-form .form-container input[type=text] {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#contact .contact-form .form-container input[type=email] {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+#contact .contact-form .form-container textarea {
+  padding: 10px;
+  background-color: grey;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  cursor: pointer;
+}
+#contact .contact-form .form-container textarea::-moz-placeholder {
+  color: #fff;
+}
+#contact .contact-form .form-container textarea::placeholder {
+  color: #fff;
+}
+#contact .contact-form .form-container .btn-container button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: grey;
+  color: #fff;
+  cursor: pointer;
+}
+#contact .contact-form .form-container .btn-container button i {
+  margin-left: 10px;
 }
 
 @media screen and (max-width: 574px) {
