--- a/style.scss
+++ b/style.scss
@@ -70,56 +70,106 @@ a{
 // utility classes ends
 
 // navbar section starts
+#header{
+    // background-color: aquamarine;
+    .navbar{
+        display: flex;
+        // flex-wrap: wrap;
+        // flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1em 0;
+        gap: 1rem;
+        position: relative;
+       
+        .nav-brand{
+            font-size: 2rem;
+            color: grey;
+        }
+        .collapse-button{
+            padding: 5px 3px;
+            position: absolute;
+            right: 10px;
+            top: 8px;
+            background: transparent;
+            outline: none;
+            border: none;
+            font-size: 1.5rem;
+            display: none;
+        }
+       
+        .collapse{
+            
+            .navbar-nav{
+                display: flex;
+                gap: 1rem;
+                .nav-link{
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    font-size: 1.4rem;
+                    color: black;
+                    opacity: .5;
+                    &.active{
+                        opacity: 1;
+                    }
+                }
+                // .search-box{
+                //   padding-right: 1rem;
+                // //   border-right: 1px solid $dark;
+                 
+                // }
+                i{
+                    font-size: 1.6rem;
+                    color: black;
+                    // margin: 0 1rem;
+                }
+            }
+        }  
+    }
+}
 
 // navbar section ends
-.navbar{
-    display: flex;
-    // flex-wrap: wrap;
-    // flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1em 0;
-    gap: 1rem;
-    position: relative;
-    .nav-brand{
+// about me section starts
+#about-me{
+    h1{
+        text-align: center;
+        margin-bottom: 2rem;
+        text-transform: uppercase;
         font-size: 2rem;
-        color: red;
+        letter-spacing: .1rem;
     }
-    .collapse-button{
-        padding: 5px 3px;
-        position: absolute;
-        right: 10px;
-        top: 8px;
-        background: transparent;
-        outline: none;
-        border: none;
-        font-size: 1.5rem;
-        display: none;
+    .about-me-container{
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
     }
-   
-    .collapse{
-        
-        .navbar-nav{
-            display: flex;
-            gap: 1rem;
-            .nav-link{
-                text-transform: uppercase;
-                font-weight: bold;
-                font-size: 1.4rem;
-            }
-            .search-box{
-              padding-right: 1rem;
-            //   border-right: 1px solid $dark;
-             
-            }
-            i{
-                font-size: 1.6rem;
-                // margin: 0 1rem;
-            }
+    .img-container{
+        width: 400px;
+        height: 400px;
+        img{
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
-    }  
+    }
+    .about-details{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-self: center;
+        h3{
+           font-size: 1.8rem;
+        }
+        p{
+            font-size: 1.6rem;
+        }
+    }
 }
-// work section styling starts
+// about me section ends
+
 // hero section starts
 #hero{
     height: 90vh;
@@ -127,6 +177,7 @@ a{
     align-items: center;
     justify-content: center;
     gap: 3rem;
+  
     .details{
         display: flex;
         flex-direction: column;
@@ -191,6 +242,7 @@ a{
   
 }
 // hero section ends
+  // work section styling starts
 #my-work {
     // background-image: linear-gradient(to bottom, rgb(4, 4, 4), transparent);
     // background-image: linear-gradient(to top, black, transparent);
@@ -210,6 +262,8 @@ a{
 
         .sub-heading {
             color: black;
+            letter-spacing: .1rem;
+            text-transform: uppercase;
         }
 
         .filter-items {
@@ -382,6 +436,123 @@ a{
 }
 
 // work section styling ends
+// contact section starts
+#contact{
+    margin-top: 2px;
+    padding: 30px;
+    // background-color: $font-color;
+    // border-bottom: $main-color;
+    h1{
+        text-align: center;
+        padding: 10px;
+        // border-bottom: 1px solid $main-color;
+        // color: $main-color;
+        letter-spacing: .1em;
+        text-transform: uppercase;
+        font-size: 2rem;
+    }
+    .contact-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        height: 100vh;
+        padding:.2em;
+        font-size: 20px;
+        .contacts-info{
+            justify-self: center;
+            // color: $main-color;
+            h2{
+                padding: .3em 0em;
+                letter-spacing: .1em;
+            }
+            .contact{
+                display: flex;
+                align-items: center;
+                gap: 16px;
+                padding: 5px;
+            }
+            .contact-media{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 30px;
+                i{
+                    font-size: 25px;
+                    // color: $main-color;
+                    margin: .8em 0em;
+                   
+                    &:hover{
+                        // color: $main-color;
+                        transform: scale(1.5);
+                        cursor: pointer;
+                    }
+                }
+            }           
+        }
+    }
+    .contact-form{
+        justify-self: center;
+        .form-container{
+            width:400px;
+            display: flex;
+            gap: 10px;
+            flex-direction: column;
+            input{
+                padding: 10px;
+                border-radius: 5px;
+                border: none;
+                outline: none;
+                background-color: gray;
+                cursor: pointer;
+                &::placeholder{
+                    
+                    color: #fff;
+                }
+                &[type="text"]{
+                    font-family:Verdana, Geneva, Tahoma, sans-serif;
+               
+                }
+                &[type="email"]{
+                    font-family:Verdana, Geneva, Tahoma, sans-serif;
+                }
+            }
+            textarea{
+                padding: 10px;
+                background-color: grey;
+                border-radius: 5px;
+                border: none;
+                outline: none;
+                // color: #fff;
+                font-family:Verdana, Geneva, Tahoma, sans-serif;
+                cursor: pointer;
+                &::placeholder{
+                    
+                    color: #fff;
+                }
+            }
+            .btn-container{
+                // text-align: center;
+                button{
+                    padding: 10px;
+                    border-radius: 5px;
+                    border: none;
+                    background-color: grey;
+                    color: #fff;
+                    cursor: pointer;
+                  
+                    i{
+                        margin-left: 10px;
+                    }
+                }
+            }
+          
+        }
+    }
+   
+}
+// contact section ends
 
 // media queries starts
 @media screen and (max-width:574px){
