--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -93,45 +94,8 @@ a {
   color: black;
 }
 
-#about-me h1 {
-  text-align: center;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
-  font-size: 2rem;
-  letter-spacing: 0.1rem;
-}
-#about-me .about-me-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
-}
-#about-me .img-container {
-  width: 400px;
-  height: 400px;
-}
-#about-me .img-container img {
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-#about-me .about-details {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-self: center;
-}
-#about-me .about-details h3 {
-  font-size: 1.8rem;
-}
-#about-me .about-details p {
-  font-size: 1.6rem;
-}
-
 #hero {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -194,6 +158,48 @@ a {
   border-radius: 50%;
 }
 
+#about {
+  padding: 5rem;
+}
+#about h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 0.1rem;
+}
+#about .about-me-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 2rem;
+  height: 100%;
+}
+#about .img-container {
+  width: 400px;
+  height: 400px;
+}
+#about .img-container img {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#about .about-details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-self: center;
+}
+#about .about-details h3 {
+  font-size: 1.8rem;
+}
+#about .about-details p {
+  font-size: 1.6rem;
+}
+
 .my-work {
   padding: 5rem;
 }
@@ -218,7 +224,7 @@ a {
   color: black;
   opacity: 0.5;
 }
-.my-work .filter .filter-items .btn.active {
+.my-work .filter .filter-items .btn.active-work {
   opacity: 1;
 }
 .my-work .grid {
@@ -334,7 +340,7 @@ a {
 
 #contact {
   margin-top: 2px;
-  padding: 30px;
+  padding: 5rem;
 }
 #contact h1 {
   text-align: center;
@@ -437,26 +443,26 @@ a {
 }
 
 @media screen and (max-width: 574px) {
-  .navbar {
+  #header .navbar {
     flex-direction: column;
   }
-  .navbar .nav-brand {
+  #header .navbar .collapse-button {
+    display: block;
+  }
+  #header .navbar .nav-brand {
     font-size: 2rem;
   }
-  .navbar .collapse {
+  #header .navbar .collapse {
     font-size: 1rem;
     height: 0;
     overflow: hidden;
     transition: height 0.5s ease-in;
   }
-  .navbar .collapse .navbar-nav {
+  #header .navbar .collapse .navbar-nav {
     flex-direction: column;
     align-items: center;
   }
-  .navbar .collapse-button {
-    display: block;
-  }
-  .navbar .showmenu {
+  #header .navbar .showmenu {
     height: 160px;
   }
 }/*# sourceMappingURL=style.css.map */
