--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -71,7 +72,10 @@ a{
 
 // navbar section starts
 #header{
-    // background-color: aquamarine;
+    // position: fixed;
+    // width: 100%;
+    // background-color: #cdc9c9;
+    // z-index: 100;
     .navbar{
         display: flex;
         // flex-wrap: wrap;
@@ -95,6 +99,7 @@ a{
             outline: none;
             border: none;
             font-size: 1.5rem;
+            // background-color: aqua;
             display: none;
         }
        
@@ -129,50 +134,9 @@ a{
 }
 
 // navbar section ends
-// about me section starts
-#about-me{
-    h1{
-        text-align: center;
-        margin-bottom: 2rem;
-        text-transform: uppercase;
-        font-size: 2rem;
-        letter-spacing: .1rem;
-    }
-    .about-me-container{
-
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
-    }
-    .img-container{
-        width: 400px;
-        height: 400px;
-        img{
-            border-radius: 10px;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    .about-details{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        align-self: center;
-        h3{
-           font-size: 1.8rem;
-        }
-        p{
-            font-size: 1.6rem;
-        }
-    }
-}
-// about me section ends
-
 // hero section starts
 #hero{
-    height: 90vh;
+    height: 100vh;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -242,8 +206,54 @@ a{
   
 }
 // hero section ends
+// about me section starts
+#about{
+    padding: 5rem;
+    // height: 100vh;
+    h1{
+        text-align: center;
+        margin-bottom: 2rem;
+        text-transform: uppercase;
+        font-size: 2rem;
+        letter-spacing: .1rem;
+    }
+    .about-me-container{
+
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        gap: 2rem;
+        height: 100%;
+    }
+    .img-container{
+        width: 400px;
+        height: 400px;
+        img{
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .about-details{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        align-self: center;
+        h3{
+           font-size: 1.8rem;
+        }
+        p{
+            font-size: 1.6rem;
+        }
+    }
+}
+// about me section ends
+
+
   // work section styling starts
-#my-work {
+#work {
     // background-image: linear-gradient(to bottom, rgb(4, 4, 4), transparent);
     // background-image: linear-gradient(to top, black, transparent);
     // background-image: linear-gradient(to bottom, black, transparent);
@@ -281,7 +291,7 @@ a{
                 color: black;
                 opacity: 0.5;
 
-                &.active {
+                &.active-work {
                     opacity: 1;
                 }
 
@@ -439,7 +449,7 @@ a{
 // contact section starts
 #contact{
     margin-top: 2px;
-    padding: 30px;
+    padding: 5rem;
     // background-color: $font-color;
     // border-bottom: $main-color;
     h1{
@@ -556,33 +566,40 @@ a{
 
 // media queries starts
 @media screen and (max-width:574px){
-    .navbar{
-        // justify-content: center;
-         flex-direction: column;
-         .nav-brand{
-             font-size: 2rem;
+    #header{
+        .navbar{
+            // justify-content: center;
+             flex-direction: column;
+             .collapse-button{
+                display: block;
+                // background-color: aqua;
+                
+             }
+         
+             .nav-brand{
+                 font-size: 2rem;
+                }
+                .collapse{
+                    font-size: 1rem;
+                    // display: none;
+                    // display: none;
+                    height: 0;
+                    overflow: hidden;
+                    transition: height 0.5s ease-in;
+                .navbar-nav{
+                    flex-direction: column;
+                    align-items: center;
+                  
+                }
             }
-            .collapse{
-                font-size: 1rem;
-                // display: none;
-                // display: none;
-                height: 0;
-                overflow: hidden;
-                transition: height 0.5s ease-in;
-            .navbar-nav{
-                flex-direction: column;
-                align-items: center;
-              
-            }
+            
+             .showmenu{
+                height: 160px;
+                // overflow: auto;
+             }
         }
-        .collapse-button{
-            display: block;
-         }
-         .showmenu{
-            height: 160px;
-            // overflow: auto;
-         }
     }
+  
         
 
   
