--- a/style.scss
+++ b/style.scss
@@ -72,10 +72,10 @@ a{
 
 // navbar section starts
 #header{
-    // position: fixed;
-    // width: 100%;
-    // background-color: #cdc9c9;
-    // z-index: 100;
+    position: fixed;
+    width: 100%;
+    background-color: #cdc9c9;
+    z-index: 100;
     .navbar{
         display: flex;
         // flex-wrap: wrap;
