--- a/style.scss
+++ b/style.scss
@@ -243,6 +243,8 @@ a{
         text-transform: uppercase;
         font-size: 2rem;
         letter-spacing: .1rem;
+        border-bottom: 1px solid black;
+        padding: 1rem;
     }
     .about-me-container{
 
@@ -303,6 +305,7 @@ a{
             color: black;
             letter-spacing: .1rem;
             text-transform: uppercase;
+            border-bottom: 1px solid black;
         }
 
         .filter-items {
@@ -489,6 +492,7 @@ a{
         letter-spacing: .1em;
         text-transform: uppercase;
         font-size: 2rem;
+        border-bottom: 1px solid black;
     }
     .contact-container{
         display: grid;
@@ -496,7 +500,7 @@ a{
         align-items: center;
         justify-content: center;
         gap: 10px;
-        height: 100vh;
+        height: 90vh;
         padding:.2em;
         font-size: 20px;
         .contacts-info{
