--- a/style.scss
+++ b/style.scss
@@ -87,7 +87,7 @@ a{
         padding: 1em 0;
         gap: 1rem;
         position: relative;
-        height: 60px;
+        // height: 60px;
        
         .nav-brand{
             font-size: 2rem;
@@ -247,10 +247,14 @@ a{
         padding: 1rem;
     }
     .about-me-container{
-
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
         align-items: center;
+        justify-content: center;
+        padding: 3rem;
+        // display: grid;
+        // grid-template-columns: 1fr 1fr;
+        // align-items: center;
         gap: 1rem;
         height: 100%;
     }
@@ -625,22 +629,27 @@ a{
                 }
                 .collapse{
                     font-size: 1rem;
+                   
                     // display: none;
                     // display: none;
                     height: 0;
                     overflow: hidden;
                     transition: height 0.5s ease-in;
+                    z-index: 200;
                 .navbar-nav{
                     flex-direction: column;
                     align-items: center;
                   
+                   
+                  
                 }
             }
-            
-             .showmenu{
+            .showmenu{
                 height: 160px;
                 // overflow: auto;
              }
+            
+             
         }
     }
   #hero{
